<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="stream">Stream</string>
    <string name="library">Library</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recently_played">Recently played</string>
    <string name="your_favourite">Your favourites</string>
    <string name="uniquely_yours">Uniquely yours</string>
    <string name="your_playlists">Your playlists</string>
    <string name="text_1">UG\'s Tracks</string>
    <string name="text_2">Playlist</string>
    <string name="song_title">Some Thing Just Like This</string>
    <string name="song_artist">The Chainsmokers, Coldplay</string>
    <string name="search_title">Play what you like</string>
    <string name="search_subtitle">Search for songs, artists and more.</string>
    <string name="stream_info_text">This feature is not available yet!!</string>
    <string name="playlist">Playlists</string>
    <string name="songs">Songs</string>
    <string name="album">Albums</string>
    <string name="artist">Artists</string>
    <string name="settings">Settings</string>

    <string name="auto_play_after_call">Auto Play After Call</string>
    <string name="auto_play_after_call_2">If enabled, song will resume after call.</string>
    <string name="crossfade">Crossfade</string>
    <string name="crossfade_2">Allows you to crossfade between songs.</string>
    <string name="off">Off</string>
    <string name="seekBar_Seconds">12s</string>
    <string name="autoplay">Autoplay</string>
    <string name="autoplay_2">Keep on listening to similar tracks.</string>
    <string name="clear_history">Clear History</string>
    <string name="clear_history_2">Clear all recent search history.</string>
    <string name="equaliser">Equaliser</string>
    <string name="equaliser_2">Adjust audio settings.</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="invite_friend_2">Share this app with your friends.</string>
    <string name="version">Version</string>
    <string name="version_2">1.0.0</string>
    <string name="about_us">About us</string>
    <string name="about_us_2">If you want to know about us.</string>
    <string name="create_playlist">Create playlist</string>
    <string name="shuffle">Shuffle</string>
    <string name="play">Play</string>
    <string name="create_playlist_info">Give your playlist a name.</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="like">Like</string>
    <string name="liked">Liked</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="ringtone">Set as ringtone</string>
    <string name="view_album">View album</string>
    <string name="view_artist">View artist</string>
    <string name="sleep">Sleep timer</string>
    <string name="stop_music">Stop music in</string>
    <string name="minutes_1">5 minutes</string>
    <string name="minutes_2">10 minutes</string>
    <string name="minutes_3">30 minutes</string>
    <string name="minutes_4">45 minutes</string>
    <string name="minutes_5">1 hour</string>
    <string name="minutes_6">End of track</string>
    <string name="rename_playlist">Rename playlist</string>
    <string name="delete_paylist">Delete playlist</string>
    <string name="sort_playlist">Sort playlist</string>
    <string name="sort_by">Sort by</string>
    <string name="title">Title</string>
    <string name="recently_added">Recently added</string>
    <string name="shuffle_all">Shuffle all</string>
    <string name="like_all">Like all songs</string>
    <string name="play_next">Play next</string>
    <string name="liked_all">Liked all songs</string>
</resources>