<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/bottom_menu_color"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            app:cardCornerRadius="2dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/temp" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:ellipsize="end"
                android:text="Something Just Like This"
                android:textColor="@color/text_color_1"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:ellipsize="end"
                android:text="The Chainsmokers, Coldplay"
                android:textColor="@color/text_color_6"
                android:textSize="16sp" />

        </LinearLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:src="@drawable/bottom_menu_line_1"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:paddingBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <RelativeLayout
            android:id="@+id/player_screen_like"
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <ImageView
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_like_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:tint="@color/text_color_4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:layout_centerVertical="true"
                android:layout_marginStart="60dp"
                android:ellipsize="end"
                android:layout_marginEnd="15dp"
                android:text="@string/like"
                android:textColor="@color/text_color_1"
                android:textSize="18sp" />

            <ImageView
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:layout_marginStart="15dp"
                android:src="@drawable/ic_liked_icon"
                android:visibility="gone"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:tint="@color/green_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:layout_centerVertical="true"
                android:layout_marginStart="50dp"
                android:visibility="gone"
                android:ellipsize="end"
                android:layout_marginEnd="15dp"
                android:text="@string/liked"
                android:textColor="@color/text_color_1"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/player_screen_liked"
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <ImageView
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_liked_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:tint="@color/green_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:layout_centerVertical="true"
                android:layout_marginStart="60dp"
                android:ellipsize="end"
                android:layout_marginEnd="15dp"
                android:text="@string/liked"
                android:textColor="@color/text_color_1"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <ImageView
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_playlist_add_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:tint="@color/text_color_4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:layout_centerVertical="true"
                android:layout_marginStart="60dp"
                android:ellipsize="end"
                android:layout_marginEnd="15dp"
                android:text="@string/add_to_playlist"
                android:textColor="@color/text_color_1"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <ImageView
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_ringtone_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:tint="@color/text_color_4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:layout_centerVertical="true"
                android:layout_marginStart="60dp"
                android:ellipsize="end"
                android:layout_marginEnd="15dp"
                android:text="@string/ringtone"
                android:textColor="@color/text_color_1"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <ImageView
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_album_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:tint="@color/text_color_4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:layout_centerVertical="true"
                android:layout_marginStart="60dp"
                android:ellipsize="end"
                android:layout_marginEnd="15dp"
                android:text="@string/view_album"
                android:textColor="@color/text_color_1"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <ImageView
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_artist"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:tint="@color/text_color_4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:layout_centerVertical="true"
                android:layout_marginStart="60dp"
                android:ellipsize="end"
                android:layout_marginEnd="15dp"
                android:text="@string/view_artist"
                android:textColor="@color/text_color_1"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/player_screen_sleep_timer"
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <ImageView
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_sleep_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:tint="@color/text_color_4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:layout_centerVertical="true"
                android:layout_marginStart="60dp"
                android:ellipsize="end"
                android:layout_marginEnd="15dp"
                android:text="@string/sleep"
                android:textColor="@color/text_color_1"
                android:textSize="18sp" />

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>