<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentSearch">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/primaryBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/search_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/search_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:textSize="14sp"
            android:textColor="@color/text_color_3"
            android:text="@string/search_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_title" />

        <RelativeLayout
            android:id="@+id/search_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/searchbar_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/searchBox_title"
                android:textSize="16sp"
                android:fontFamily="@font/acme"
                android:textColor="@color/text_color_1"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="@string/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/search_back_layout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:visibility="gone"
            android:background="@color/search_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/search_editText"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                android:fontFamily="@font/acme"
                android:textColor="@color/text_color_1"
                android:textSize="16sp"
                android:singleLine="true"
                android:background="@color/search_background"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <ImageView
                android:id="@+id/search_back_button"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:padding="10dp"
                android:src="@drawable/ic_search_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="@color/text_color_1" />

            <ImageView
                android:id="@+id/search_cancel_button"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:visibility="gone"
                android:src="@drawable/ic_search_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="@color/text_color_1" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>